--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@
                     <div class="col-md-7 padding-left-35">
                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.2s; font-size: 30px;">Hi there, <span class="about-sub">nice to meet you</span></h3>
                         <h3 class="animated animated_scroll fadeInUp about-header-fix" style="animation-delay: 0.2s; font-size: 30px; display: none;">About Me</h3>
-                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s">I am a web developer and writer with a passion for computing from an early age. While studying computer science at the university, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. In addition to web development, I also write blog posts and whitepapers on a variety of technology topics, including blockchain. My interest in blockchain technology led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.
+                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s">I am a web developer and writer with a passion for computing from an early age. While studying computer science at the university, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS, NextJS, and NodeJS. In addition to web development, I also write blog posts and whitepapers on a variety of technology topics, including blockchain. My interest in blockchain technology led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.
                         <br/>When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, especially Spanish. I also love watching movies and playing video games.</p>
                         <div class="skills">
                             <ul class="dev-skill">
                                 <li>ReactJS</li>
                                 <li>NextJS</li>
+                                <li>NodeJS</li>
                                 <li>Solidity</li>
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -220,11 +221,11 @@
                             <div class="icon front-icon">
                                 <i class="fa-brands fa-react"></i>
                             </div>
-                            <h3>Front-End <br>Development </h3>
+                            <h3>Web <br>Development </h3>
                             <div class="heading">
                                 <div class="heading-container">
                                     <div class="heading-title">
-                                        Passionate about UI/UX. Over 5 years of development experience in HTML, CSS, JS, React and NextJS frameworks.
+                                        Passionate about UI/UX. Over 5 years of development experience in HTML, CSS, JS, ReactJS, NextJS and NodeJS frameworks.
                                     </div>
                                 </div>
                             </div>
